# rustauth

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/rules/: rust-coding-style.md  rust-patterns.md  rust-security.md  rust-testing.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.sqlx/: query-2adc9fa303079a3e9c28bbf0565c1ac60eea3a5c37e34fc6a0cb6e151c325382.json  query-484870d7efac63b106032dc254819508fffc3b9ee9f011e4ef44c70b1e90677f.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-e3cd086b600d906f733c06a98e7e5580e6deb315739228a17ee089abd267e480.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 0001_create_users.up.sql  0002_create_password_reset_tokens.up.sql
proto/: auth.proto
src/: email.rs  lib.rs  main.rs
src/data/: error.rs  lockout_store.rs  mod.rs  reset_token_repository.rs  token_store.rs  user_repository.rs
src/domain/: error.rs  jwt.rs  mod.rs  password.rs
src/middleware/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
tests/: api.rs  grpc.rs  password_reset.rs
